La page logement est fonctionnelle, le composant collapse affiche correctement une liste pour les équipements

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -6,11 +6,18 @@
         align-items: center;
         border-radius: 5px;
         height: 50px;
+        @media (max-width: 375px) {
+            height: 30px;
+        }
     }
 
     &__title {
         color: white;
         margin-left: 10px;
+        font-weight: 700;
+        @media (max-width: 375px) {
+            font-size: 13px;
+        }
     }
     &__chevron {
         color: white;
