--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,7 +8,7 @@
         object-fit: contain;
     }
     &__nav {
-        width: 15%;
+        width: 20%;
         @media (max-width: 375px) {
             width: 40%;
         }
@@ -25,8 +25,14 @@
     &__link {
         text-decoration: none;
         color: black;
+        font-size: 24px;
+        font-weight: 500;
         &--active {
             text-decoration: underline;
+        }
+        @media (max-width: 375px) {
+            font-size: 12px;
+            text-transform: uppercase;
         }
     }
     @media (max-width: 375px) {
