--- a/src/components/Rating/Rating.scss
+++ b/src/components/Rating/Rating.scss
@@ -2,4 +2,9 @@
     display: flex;
     justify-content: space-between;
     gap: 15px;
+    @media (max-width: 375px) {
+        width: 100px;
+        height: 15px;
+        gap: 5px;
+    }
 }
