--- a/src/components/Tag/Tag.scss
+++ b/src/components/Tag/Tag.scss
@@ -1,9 +1,11 @@
 .tags {
     display: flex;
     gap: 10px;
-    height: 25px;
+    height: 100%;
+    flex-wrap: wrap;
     &__element {
         display: flex;
+        height: 25px;
         align-items: center;
         text-align: center;
         padding: 0 30px;
@@ -12,5 +14,10 @@
         color: white;
         font-weight: 700;
         font-size: 14px;
+        @media (max-width: 375px) {
+            height: 18px;
+            font-size: 10px;
+            padding: 0 20px;
+        }
     }
 }
