--- a/src/pages/APropos/APropos.scss
+++ b/src/pages/APropos/APropos.scss
@@ -6,5 +6,6 @@
     padding: 0 100px;
     @media (max-width: 375px) {
         padding: 0;
+        gap: 15px;
     }
 }
