--- a/src/pages/AccomodationSheet/AccomodationSheet.scss
+++ b/src/pages/AccomodationSheet/AccomodationSheet.scss
@@ -28,7 +28,6 @@
     }
     &__tag {
         margin-top: 20px;
-        height: 30px;
     }
     &__rating {
         height: 30px;
@@ -57,12 +56,19 @@
         padding-top: 5px;
         font-weight: 500;
         font-size: 18px;
+        @media (max-width: 375px) {
+            font-size: 16px;
+        }
     }
     &__pictureOwner {
         height: 60px;
         width: 60px;
         border-radius: 50%;
         margin: 5px;
+        @media (max-width: 375px) {
+            height: 32px;
+            width: 32px;
+        }
     }
     &__collapse {
         display: grid;
